--- a/style.css
+++ b/style.css
@@ -2,5 +2,60 @@ body
 {
     font-family: 'Montserrat', sans-serif;
     margin: 0;
-    padding: 0;
 }
+
+.section-skip-heading
+{
+    color: #575757;
+    font-size: 35px;
+}
+.textOrange
+{
+    color:#FC9149;
+}
+.section-p-text
+{
+    color: rgb(130,130,130);
+}
+
+.linkText
+{
+    text-decoration: none;
+    color: #ffffff;
+    font-weight: bold;
+}
+.order-button
+{
+    background-image: linear-gradient(120deg,MediumVioletRed,LightCoral);
+    padding: 8px 12px;
+    border-radius: 100px;
+    box-shadow: 2px 5px 10px #fc8f4980;
+}
+
+.flex-section
+{
+    display:flex;
+}
+
+.half-width
+{
+    width: 40%;
+    padding-left: 10%;
+}
+.half-width img
+{
+    width: 80%;
+    margin-top: 30px;
+}
+
+.skip-background
+{
+    background-image: url(images/shapes/Inkedtop-banner_LI.jpg);
+    background-repeat: no-repeat;
+}
+
+#skip
+{
+    margin-top: 60px;
+}
+
